--- a/Snake/snake.css
+++ b/Snake/snake.css
@@ -2,9 +2,11 @@
     position: absolute;
     left: 100%;
     top: 100%;
+    margin: 0px;
 }
 
 #gameCanvas {
     width: 100%;
     height: 100%;
+    margin: 0px;
 }
